--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "next": "14.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5",
+    "vitest": "^2.0.3"
   }
 }
