--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "husky": "^9.0.11",
     "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
